<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".fragment.SummaryFragment">

    <TextView
        android:id="@+id/txt_time_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_time"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_summary_month"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_summary_month"
        android:imeOptions="actionNext"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_time_summary">

    </EditText>

    <EditText
        android:id="@+id/et_summary_year"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_summary_year"
        android:imeOptions="actionGo"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/et_summary_month"
        app:layout_constraintTop_toBottomOf="@id/txt_time_summary">

    </EditText>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/et_summary_year"
        app:layout_constraintTop_toBottomOf="@id/txt_time_summary">

        <RadioButton
            android:id="@+id/rd_vnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_color"
            android:checked="true"
            android:text="VND" />

        <RadioButton
            android:id="@+id/rd_usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/main_color"
            android:text="USD" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_summary_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:text="@string/summary"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_summary_month" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_money_e"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/chart"
        app:layout_constraintEnd_toStartOf="@id/rcv_money_i"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_summary_enter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_money_i"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rcv_money_e"
        app:layout_constraintTop_toBottomOf="@id/btn_summary_enter" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>